--- a/docs/assets/index.scss
+++ b/docs/assets/index.scss
@@ -14,7 +14,7 @@
       font-size: 18px;
       margin: 10px 0;
     }
-    .abs {
+    .desc {
       font-size: 14px;
       color: gray;
       margin-bottom: 10px;
@@ -36,7 +36,7 @@
           box-shadow: 0 2px 15px 2px #e6e6e6;
         }
       }
-      .install {
+      .setup {
         @include btn;
         &:hover {
           background: #249bdc;
